--- a/TestWP/MainPage.xaml
+++ b/TestWP/MainPage.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!-- LOCALIZATION NOTE:
+        <!-- LOCALIZATION NOTE:  fdsadfasdfsadf
             To localize the displayed strings copy their values to appropriately named
             keys in the app's neutral language resource file (AppResources.resx) then
             replace the hard-coded text value between the attributes' quotation marks
